apps/base/actual-budget/actual-budget-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget-ingressroute
  namespace: actual-budget
  annotations:
    gethomepage.dev/href: "https://actual-budget.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Actual Budget"
    gethomepage.dev/description: "A local-first personal finance app"
    gethomepage.dev/app: actual-budget
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/actual-budget.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`actual-budget.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: actual-budget
          port: 5006
          scheme: http
  tls: {}
